--- a/src/index.html
+++ b/src/index.html
@@ -37,13 +37,13 @@
 
                         <ul id="menu">
                             <li>
-                                <a href="#">Home</a>
+                                <a href="#" class="menuelement">Home</a>
                             </li>
                             <li>
-                                <a href="#">About</a>
+                                <a href="#" class="menuelement">About</a>
                             </li>
                             <li>
-                                <a href="#">Projects</a>
+                                <a href="#" class="menuelement">Projects</a>
                             </li>
                         </ul>
                     </div>
