Fix welcome message

--- a/src/index.html
+++ b/src/index.html
@@ -69,10 +69,10 @@
         <article class="hero-body fadein">
             <div class="container">
                 <h1 class="title is-size-2 has-text-primary">
-                    André Ramon.
+                    Welcome
                 </h1>
                 <p class="subtitle has-text-white">
-                    Computer Science Student from Brandenburg, Germany.
+                    André Thiele is a computer science student from Brandenburg, Germany.
                 </p>
                 <a class="button is-primary is-rounded" href="https://github.com/itsandreramon" target="_blank">
                     <span class="icon">
