Change color of the footer

--- a/src/index.html
+++ b/src/index.html
@@ -92,8 +92,8 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="content has-text-centered">
+    <footer class="footer has-background-light">
+        <div class="content has-text-centered has-dark">
             <p>Copyright © 2018. All rights reserved.</p>
         </div>
     </footer>
