--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>André Ramon</title>
+    <title>André Thiele</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
