--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,14 +8,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../dist/css/styles.css">
+    <link rel="stylesheet" href="../../dist/css/styles.css">
 
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
-    <script language="javascript" type="text/javascript" src="js/fadein.js"></script>
+    <script language="javascript" type="text/javascript" src="../js/fadein.js"></script>
 
-    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon/favicon.ico">
-    <link rel="icon" type="image/png" href="assets/favicon/favicon.png" sizes="32x32">
-    <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon/favicon.ico">
+    <link rel="icon" type="image/png" href="../assets/favicon/favicon.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="../assets/favicon/apple-touch-icon.png">
 </head>
 
 <body onload="fadein()">
