Rename tag article to div

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <!-- Body -->
-        <article class="hero-body fadeinbody">
+        <div class="hero-body fadeinbody">
             <div class="container">
                 <h1 class="title is-size-2 has-text-primary">
                     Welcome
@@ -90,7 +90,7 @@
                 </a>
                 </p>
             </div>
-        </article>
+        </div>
     </section>
 
     <!-- Footer -->
