Switch menu elements from ids to classes

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,13 +38,13 @@
 
                         <ul id="menu">
                             <li>
-                                <a href="#" class="menuelement">Home</a>
+                                <a href="#" id="menuelement">Home</a>
                             </li>
                             <li>
-                                <a href="#" class="menuelement">About</a>
+                                <a href="#" id="menuelement">About</a>
                             </li>
                             <li>
-                                <a href="#" class="menuelement">Projects</a>
+                                <a href="#" id="menuelement">Projects</a>
                             </li>
                         </ul>
                     </div>
