Fix fade out animation so that it correctly fades out only when the button is clicked

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,8 +30,8 @@
                 <div class="container">
 
                     <!-- Hamburger -->
-                    <div id="menuToggle" onclick="fadeinbackground()">
-                        <input type="checkbox" />
+                    <div id="menuToggle">
+                        <input type="checkbox" onclick="fadeinbackground()" />
                         <span></span>
                         <span></span>
                         <span></span>
