--- a/src/html/index.html
+++ b/src/html/index.html
@@ -61,24 +61,19 @@
         <!-- Body -->
         <div class="hero-body fadeinbody">
             <div class="container">
-                <h1 class="title is-size-2 has-text-primary">
-                    Welcome
-                </h1>
+                <h1 class="title is-size-2 has-text-primary">Welcome</h1>
+
                 <p class="subtitle has-text-white">
                     André Thiele is a computer science student from Brandenburg, Germany.
                 </p>
-                <a class="button is-primary is-rounded" href="https://github.com/itsandreramon" target="_blank">
-                    <span class="icon">
-                        <i class="fab fa-github"></i>
-                    </span>
 
+                <a class="button is-primary is-rounded" href="https://github.com/itsandreramon" target="_blank">
+                    <span class="icon"><i class="fab fa-github"></i></span>
                     <span>GitHub</span>
                 </a>
-                <a class="button is-light is-rounded" href="https://twitter.com/itsandreramon" target="_blank">
-                    <span class="icon">
-                        <i class="fab fa-twitter"></i>
-                    </span>
 
+                <a class="button is-light is-rounded" href="https://twitter.com/itsandreramon" target="_blank">
+                    <span class="icon"><i class="fab fa-twitter"></i></span>
                     <span>Twitter</span>
                 </a>
             </div>
