--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,45 +20,45 @@
 
 <body onload="fadeinbody()">
 
-    <section class="hero is-fullheight has-background-info">
+    <!-- Navigation -->
+    <div id="darkenbackground"></div>
 
-        <div id="darkenbackground"></div>
+    <div class="hero-head">
+        <nav class="navbar has-background-info">
+            <div class="container">
 
-        <!-- Head -->
-        <div class="hero-head">
-            <nav class="navbar">
-                <div class="container">
+                <!-- When smaller than 1087px -->
+                <div id="menuToggle">
+                    <input type="checkbox" onclick="fadeinbackground()" />
 
-                    <!-- When smaller than 1087px -->
-                    <div id="menuToggle">
-                        <input type="checkbox" onclick="fadeinbackground()" />
-                        
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
 
-                        <ul id="menu">
-                            <li><a class="menuelement" href="index.html">Home</a></li>
-                            <li><a class="menuelement" href="#" >About</a></li>
-                            <li><a class="menuelement" href="#">Work</a></li>
-                            <li><a class="menuelement" href="#">Contact</a></li>
-                        </ul>
-                    </div>
+                    <ul id="menu">
+                        <li><a class="menuelement" href="#home">Home</a></li>
+                        <li><a class="menuelement" href="#">About</a></li>
+                        <li><a class="menuelement" href="#">Work</a></li>
+                        <li><a class="menuelement" href="#">Contact</a></li>
+                    </ul>
+                </div>
 
-                    <!-- When bigger than 1087px -->
-                    <div id="navbarMenuHeroA" class="navbar-menu">
-                        <div class="navbar-end">
-                            <a class="button-animated has-text-white" href="index.html">Home</a>
-                            <a class="button-animated has-text-white" href="#">About</a>
-                            <a class="button-animated has-text-white" href="#">Work</a>
-                            <a class="button-animated has-text-white" href="#">Contact</a>
-                        </div>
+                <!-- When bigger than 1087px -->
+                <div id="navbarMenuHeroA" class="navbar-menu">
+                    <div class="navbar-end">
+                        <a class="button-animated has-text-white" href="#home">Home</a>
+                        <a class="button-animated has-text-white" href="#">About</a>
+                        <a class="button-animated has-text-white" href="#">Work</a>
+                        <a class="button-animated has-text-white" href="#">Contact</a>
                     </div>
                 </div>
-            </nav>
-        </div>
 
-        <!-- Body -->
+            </div> <!-- Ende Container -->
+        </nav> <!-- Ende Navbar -->
+    </div> <!-- Ende Hero Head -->
+
+    <!-- Home Section -->
+    <section id="home" class="hero is-fullheight has-background-info">
         <div class="hero-body fadeinbody">
             <div class="container">
                 <h1 class="title is-size-2 has-text-primary">Welcome</h1>
