Insert comment for better readability

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -49,8 +49,8 @@
                     </li>
                 </ul>
             </div>
-
-
+            
+            <!-- When greater than 1087px -->
             <div id="navbarExampleTransparentExample" class="navbar-menu">
                 <div class="navbar-start">
                     <a class="navbar-item button-animated" href="index.html">
@@ -80,9 +80,7 @@
                     </a>
                 </div>
             </div>
-
         </nav>
-
 
         <!-- Body -->
         <div class="hero-body fadeinbody">
