Adjust hrefs to new files

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,19 +39,19 @@
 
                     <ul id="menu">
                         <li>
-                            <a class="menuelement" href="#">Home</a>
+                            <a class="menuelement" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a class="menuelement" href="#">About</a>
+                            <a class="menuelement" href="about.html">About</a>
                         </li>
                         <li>
-                            <a class="menuelement" href="#">Goals</a>
+                            <a class="menuelement" href="goals.html">Goals</a>
                         </li>
                         <li>
-                            <a class="menuelement" href="#">Work</a>
+                            <a class="menuelement" href="work.html">Work</a>
                         </li>
                         <li>
-                            <a class="menuelement" href="#">Contact</a>
+                            <a class="menuelement" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -62,14 +62,14 @@
                         <a class="navbar-item button-animated" href="index.html">
                             Home
                         </a>
-                        <a class="navbar-item button-animated" href="index.html">
+                        <a class="navbar-item button-animated" href="about.html">
                             About
                         </a>
-                        <a class="navbar-item button-animated" href="index.html">
+                        <a class="navbar-item button-animated" href="goals.html">
                             Goals
                         </a>
                         <div class="navbar-item has-dropdown is-hoverable">
-                            <a class="navbar-link" href="#">
+                            <a class="navbar-link" href="work.html">
                                 Work
                             </a>
                             <div class="navbar-dropdown is-boxed">
