Add icons to the dropdown menu

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -77,19 +77,20 @@
                         </a>
                         <div class="navbar-dropdown is-boxed">
                             <a class="navbar-item" href="/documentation/overview/start/">
-                                Web Development
+                                <i class="fab fa-html5"></i>
+                                &ensp;Web Development
                             </a>
                             <a class="navbar-item" href="https://bulma.io/documentation/modifiers/syntax/">
-                                Java
+                                <i class="fab fa-java"></i>
+                                &ensp;Java
                             </a>
                             <a class="navbar-item" href="https://bulma.io/documentation/columns/basics/">
-                                Android
+                                <i class="fab fa-android"></i>
+                                &ensp;Android
                             </a>
                             <a class="navbar-item" href="https://bulma.io/documentation/layout/container/">
-                                Blog
-                            </a>
-                            <a class="navbar-item" href="https://bulma.io/documentation/form/general/">
-                                Form
+                                <i class="fab fa-wordpress"></i>
+                                &ensp;Blog
                             </a>
                         </div>
                     </div>
