--- a/src/html/index.html
+++ b/src/html/index.html
@@ -118,7 +118,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer has-background-light">
+    <footer class="footer has-background-white">
         <div class="content has-text-centered has-text-dark">
             <p>© 2018 André Thiele. All rights reserved.</p>
         </div>
