Change text to uppercase

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,7 +28,7 @@
         <nav class="navbar has-background-light is-fixed-top">
             <div class="navbar-brand">
                 <a class="navbar-item spaced-letters" href="index.html">
-                    ANDRÉ THIELE
+                    André Thiele
                 </a>
 
                 <!-- When smaller than 1087px -->
