--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -33,30 +33,30 @@
 
                 <!-- When smaller than 1087px -->
                 <div id="menuToggle">
-                    <input type="checkbox" onclick="fadeinbackground()" />
-
-                    <span></span>
-                    <span></span>
-                    <span></span>
-
-                    <ul id="menu">
-                        <li>
-                            <a class="menuelement" href="index.html">Home</a>
-                        </li>
-                        <li>
-                            <a class="menuelement" href="about.html">About</a>
-                        </li>
-                        <li>
-                            <a class="menuelement" href="goals.html">Goals</a>
-                        </li>
-                        <li>
-                            <a class="menuelement" href="work.html">Work</a>
-                        </li>
-                        <li>
-                            <a class="menuelement" href="contact.html">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+                        <input type="checkbox" onclick="fadeinbackground()" />
+    
+                        <span></span>
+                        <span></span>
+                        <span></span>
+    
+                        <ul id="menu">
+                            <li>
+                                <a class="menuelement" href="index.html">Home</a>
+                            </li>
+                            <li>
+                                <a class="menuelement" href="about.html">About</a>
+                            </li>
+                            <li>
+                                <a class="menuelement" href="goals.html">Goals</a>
+                            </li>
+                            <li>
+                                <a class="menuelement" href="work.html">Work</a>
+                            </li>
+                            <li>
+                                <a class="menuelement" href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
             </div>
 
             <div id="navbarExampleTransparentExample" class="navbar-menu">
@@ -104,13 +104,12 @@
         <!-- Body -->
         <div class="hero-body has-text-centered fadeinbody">
             <div class="container">
-                <h1 class="title is-size-2 has-text-dark">Welcome</h1>
+                <h1 class="title is-size-2 has-text-dark">Contact</h1>
+                <p>hello@andrethiele.com</p>
 
-                <p class="subtitle has-text-dark">
-                    André Thiele is a computer science student from Brandenburg, Germany.
-                </p>
-                <a class="button is-primary is-outlined is-rounded" href="https://twitter.com/itsandreramon" target="_blank">
-                    <span>See my work</span>
+                <br>
+                <a class="button is-primary is-outlined is-rounded" href="mailto:hello@andrethiele.com">
+                    <span>Send a mail</span>
                 </a>
             </div>
         </div>
