--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,7 +25,7 @@
         <!-- Navigation -->
         <div id="darkenbackground"></div>
 
-        <nav class="navbar has-background-light is-fixed-top">
+        <nav class="navbar is-light is-fixed-top">
             <div class="navbar-brand">
                 <a class="navbar-item spaced-letters" href="index.html">
                     André Thiele
@@ -62,39 +62,19 @@
             <div id="navbarExampleTransparentExample" class="navbar-menu">
 
                 <div class="navbar-end">
-                    <a class="navbar-item" href="index.html">
+                    <a class="navbar-item button-animated" href="index.html">
                         Home
                     </a>
-                    <a class="navbar-item" href="about.html">
+                    <a class="navbar-item button-animated" href="about.html">
                         About
                     </a>
-                    <a class="navbar-item" href="goals.html">
+                    <a class="navbar-item button-animated" href="goals.html">
                         Goals
                     </a>
-                    <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link" href="work.html">
-                            Work
-                        </a>
-                        <div class="navbar-dropdown is-boxed">
-                            <a class="navbar-item" href="work_webdev.html">
-                                <i class="fab fa-html5"></i>
-                                &ensp;Web Development
-                            </a>
-                            <a class="navbar-item" href="work_java.html">
-                                <i class="fab fa-java"></i>
-                                &ensp;Java
-                            </a>
-                            <a class="navbar-item" href="work_android.html">
-                                <i class="fab fa-android"></i>
-                                &ensp;Android
-                            </a>
-                            <a class="navbar-item" href="work_blog.html">
-                                <i class="fab fa-wordpress"></i>
-                                &ensp;Blog
-                            </a>
-                        </div>
-                    </div>
-                    <a class="navbar-item" href="contact.html">
+                    <a class="navbar-item button-animated" href="work.html">
+                        Work
+                    </a>
+                    <a class="navbar-item button-animated" href="contact.html">
                         Contact
                     </a>
                 </div>
