Fix navbar background

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,7 +25,7 @@
         <!-- Navigation -->
         <div id="darkenbackground"></div>
 
-        <nav class="navbar is-light is-fixed-top">
+        <nav class="navbar is-light has-background-white is-fixed-top">
             <div class="navbar-brand">
                 <a class="navbar-item spaced-letters" href="index.html">
                     André Thiele
