Add new svg brand image

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,8 +27,8 @@
 
         <nav class="navbar is-light has-background-white is-fixed-top">
             <div class="navbar-brand">
-                <a class="navbar-item spaced-letters" href="index.html">
-                    André Thiele
+                <a class="navbar-item" href="index.html">
+                    <img src="../assets/brand/brand.svg" class="brandimg">
                 </a>
 
                 <!-- When smaller than 1087px -->
