Refine navbar experience

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html class="has-navbar-fixed-top">
+<html>
 
 <head>
     <title>André Thiele</title>
@@ -24,10 +24,11 @@
 
         <!-- Navigation -->
         <div id="darkenbackground"></div>
+        <!-- <div class="helperline"></div> -->
         <div class="divider"></div>
 
-        <nav class="navbar is-light has-background-white is-fixed-top">
-            <div class="navbar-brand">
+        <nav class="navbar is-light has-background-white">
+            <div class="navbar-brand button-animated">
                 <a class="navbar-item" href="index.html">
                     <img src="../assets/brand/brand.svg" class="brandimg">
                 </a>
@@ -60,7 +61,7 @@
                 </div>
             </div>
 
-            <div id="navbarExampleTransparentExample" class="navbar-menu">
+            <div class="navbar-menu">
 
                 <div class="navbar-end">
                     <a class="navbar-item button-animated" href="index.html">
