Add fixed navigation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html class="has-navbar-fixed-top">
 
 <head>
     <title>André Thiele</title>
@@ -27,8 +27,8 @@
         <!-- <div class="helperline"></div> -->
         <div class="divider"></div>
 
-        <nav class="navbar is-light has-background-white">
-            <div class="navbar-brand button-animated">
+        <nav class="navbar is-light has-background-white is-fixed-top">
+            <div class="navbar-brand">
                 <a class="navbar-item" href="index.html">
                     <img src="../assets/brand/brand.svg" class="brandimg">
                 </a>
@@ -98,13 +98,6 @@
         </div>
 
     </section>
-
-    <!-- Footer -->
-    <footer class="footer has-background-white">
-        <div class="content has-text-centered has-text-dark">
-            <p>© 2018 André Thiele. All rights reserved.</p>
-        </div>
-    </footer>
 
 </body>
 
