--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,7 @@
 
 <body onload="fadeinbody()">
 
-    <section class="hero is-fullheight has-background-light">
+    <section class="hero has-background-light is-fullheight">
 
         <!-- Navigation -->
         <div id="darkenbackground"></div>
@@ -87,7 +87,6 @@
         <div class="hero-body has-text-centered fadeinbody">
             <div class="container">
                 <h1 class="title is-size-2 has-text-dark">Welcome</h1>
-
                 <p class="subtitle has-text-dark">
                     André Thiele is a computer science student from Brandenburg, Germany.
                 </p>
@@ -98,6 +97,16 @@
         </div>
 
     </section>
+
+    <footer class="footer has-background-white">
+        <div class="content has-text-centered">
+            <p>
+                Personal Website by
+                <a href="https://github.com/itsandreramon">André Thiele</a>. This work is licensed under a
+                <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY NC ND 4.0 International License</a>.
+            </p>
+        </div>
+    </footer>
 
 </body>
 
