Add background image and update footer

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,7 @@
 
 <body onload="fadeinbody()">
 
-    <section class="hero has-background-light is-fullheight">
+    <section class="hero is-fullheight">
 
         <!-- Navigation -->
         <div id="darkenbackground"></div>
@@ -84,13 +84,13 @@
         </nav>
 
         <!-- Body -->
-        <div class="hero-body has-text-centered fadeinbody">
+        <div class="hero-body has-text-centered fadeinbody header-image">
             <div class="container">
-                <h1 class="title is-size-2 has-text-dark">Welcome</h1>
-                <p class="subtitle has-text-dark">
+                <h1 class="title is-size-2 has-text-light">Welcome</h1>
+                <p class="subtitle has-text-light">
                     André Thiele is a computer science student from Brandenburg, Germany.
                 </p>
-                <a class="button is-primary is-outlined is-rounded" href="https://twitter.com/itsandreramon" target="_blank">
+                <a class="button is-light is-outlined is-rounded" href="https://twitter.com/itsandreramon" target="_blank">
                     <span>See my work</span>
                 </a>
             </div>
@@ -99,11 +99,14 @@
     </section>
 
     <footer class="footer has-background-white">
-        <div class="content has-text-centered">
+        <div class="content has-text-centered has-text-grey-light">
             <p>
                 Personal Website by
-                <a href="https://github.com/itsandreramon">André Thiele</a>. This work is licensed under a
+                <a href="https://github.com/itsandreramon">André Thiele</a>.
+                <br/>This work is licensed under a
                 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY NC ND 4.0 International License</a>.
+                <br/>
+                Photo by <a href="https://unsplash.com/photos/Iem8O6y7ErA">Ryan Cheng</a> on Unsplash.
             </p>
         </div>
     </footer>
